# fastapi-vendas

./: .gitignore  Dockerfile  README.md  alembic.ini  auth.py  database.py  docker-compose.yml  infog2_collection.json  pyproject.toml
app/: main.py
docs/: README.md
migrations/: env.py
migrations/versions/: 0bead93268c4_create_clients_table.py  286705d3f228_add_address_fields_to_client.py  342161ceeb65_create_tables.py  43ecb4704dbd_add_created_by_user_to_orders.py  5e41abd2fc0a_create_users_table.py  6220b6fba61a_associate_orders_with_clients.py  af5229eb2522_adiciona_coluna_is_admin_em_users_e_.py  c9d445fea41e_create_products_table.py  e66bcf914191_add_active_and_created_at_columns_to_.py  ef76fa36aa95_add_updated_at_column_to_products.py  fd62833671a3_create_orders_and_order_items_tables.py
scripts/: cleanup.sh  run_tests.sh  setup_dev.sh
src/: validators.py
src/core/: config.py
src/models/: client.py  order.py  product.py  user.py
src/notifications/: email_channel.py  notification_channel.py  notification_service.py
src/routers/: auth_controller.py  client_controller.py  order_controller.py  product_controller.py  user_controller.py
src/schemas/: client.py  order.py  product.py  user.py
src/services/: client_service.py  order_service.py  product_service.py  user_service.py
tests/: test_auth.py  test_auth_permissions.py  test_clients_operations.py  test_home_root.py  test_orders_operations.py  test_products_operations.py  test_users_operations.py
tests/unit/: test_client_service.py  test_order_service.py  test_product_service.py  test_user_service.py
